# polyCrystalGen

./: CMakeLists.txt  README.md  polyCrystalGen.cpp  setPhysicalGroups.cpp
Vorogmsh/: CMakeLists.txt  vorogmsh.cpp  vorogmsh.h
input/: geometry.txt  geometry_six_cube.txt  geometry_ten_cube.txt  gran_distribution.ipynb
